[package]
name = "glowie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.22.0", features=["wayland"] }
egui_extras = {version="0.22.0", features=["image"]}
image = "0.24.6"
tokio = {version="1.28.2", features=["full"]}
sqlx = {version="0.6.2", features=["runtime-tokio-native-tls", "sqlite"]}
img_hash = "3.0"