[package]
name = "refsto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.22.0", features=["wayland"] }
egui_extras = {version="0.22.0", features=["image"]}
tokio = {version="1.28.2", features=["full"]}
sqlx = {version="0.6.2", features=["runtime-tokio-native-tls", "sqlite", "offline"]}
image_hasher = "1.1.0"
anyhow = "1.0.71"
tokio-stream = "0.1.14"
image = "0.24"
tokio-rayon = "2.1.0"
futures = "0.3.28"
tokio-util = "0.7.8"
